--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -35,6 +35,12 @@ veggy <- cabbages
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+boxplot(VitC~Cult,data=veggy)
+```
+
+The box plot from the data shows that the C52 has a significantly larger amount of Vitamin C than that of C32. I can tell because the bottom of the box for C52 is above the top of the box for C32. 
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
